force-app/main/default/objects/Integration_Error__c/Integration_Error__c.object-meta.xml
<CustomObject>
    <label>Integration Error</label>
    <nameField>
        <displayFormat>ERR-{0000}</displayFormat>
        <label>Integration Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>