force-app/main/default/objects/Integration_Error__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>