force-app/main/default/objects/Integration_Error__c/fields/Error_Severity__c.field-meta.xml
<CustomField>
    <fullName>Error_Severity__c</fullName>
    <label>Error Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRITICAL</fullName>
                <label>Critical</label>
            </value>
            <value>
                <fullName>HIGH</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>LOW</fullName>
                <label>Low</label>
            </value>
            <value>
                <fullName>INFO</fullName>
                <label>Info</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>