force-app/main/default/objects/Integration_Error__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUTHENTICATION</fullName>
                <label>Authentication</label>
            </value>
            <value>
                <fullName>NETWORK</fullName>
                <label>Network</label>
            </value>
            <value>
                <fullName>DATA</fullName>
                <label>Data</label>
            </value>
            <value>
                <fullName>PLATFORM</fullName>
                <label>Platform</label>
            </value>
            <value>
                <fullName>TIMEOUT</fullName>
                <label>Timeout</label>
            </value>
            <value>
                <fullName>HTTP_CALLOUT_ERROR</fullName>
                <label>HTTP Callout Error</label>
            </value>
            <value>
                <fullName>RETRY_ERROR</fullName>
                <label>Retry Error</label>
            </value>
            <value>
                <fullName>RETRY_EXHAUSTED</fullName>
                <label>Retry Exhausted</label>
            </value>
            <value>
                <fullName>FRAMEWORK_ERROR</fullName>
                <label>Framework Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>