force-app/main/default/objects/Integration_Error__c/fields/Technical_Context__c.field-meta.xml
<CustomField>
    <fullName>Technical_Context__c</fullName>
    <label>Technical Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>